# qt-2048-wasm

./: .gitignore  2048.js  2048_2afb3b7e9eca496a2e3d1ff31351f35f56a526fd.js  2048_430cd7f979ead8019a6bf588e04c85001e333884.js  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  index.html  report.tex  run_local.sh  style.css  sync_all.sh
.github/workflows/: deploy-wasm.yml  test-deploy.yml
2048_autogen/: deps  moc_predefs.h
2048_autogen/UVLADIE3JM/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
src/: config.h  gameengine.cpp  gameengine.h  main.cpp  mainwindow.cpp  mainwindow.h  style.css
